Update closing div class from 'holes' to 'paper'

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       HaydenPhotos.bauska.org and haydenpics.bauska.org
       Add robots.txt to websites throughout.">
     </textarea>
-  </div>  <!-- class='holes' -->
+  </div>  <!-- class='paper' -->
   
 </body>
 </html>
