Add editable text area for tasks in index.html
Added editable text area with various tasks and notes.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,25 @@
 </head>
 <body>
   <div class="paper">
+    <div class="lines">
+      <div class="text" contenteditable spellcheck="false">
+        You can edit this text! <br /><br />
+        Make robots.txt
+        for each and every website in gitub.
+        Put adventure time on thumb drives and send to Kyah.
+        Start on cool photo album for Hayden, Alex and baby.
+        Create svg.bauska.org &amp; svg-intro.bauska.org
+        Work on 404.html/404.css for primary domain &amp; subdomains
+        HaydenPhotos.bauska.org and haydenpics.bauska.org
+        Add robots.txt to websites throughout
+      </div>
+    </div>
+    <div class="holes hole-top"></div>
+    <div class="holes hole-middle"></div>
+    <div class="holes hole-bottom"></div>
+  </div>
+<!--
+  <div class="paper">
     <div class="holes"></div>
     <textarea placeholder="Make robots.txt for each and every website in gitub.
       Put adventure time on thumb drives and send to Kyah.
@@ -63,6 +82,6 @@
       Add robots.txt to websites throughout.">
     </textarea>
   </div>  <!-- class='paper' -->
-  
+-->
 </body>
 </html>
