--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
     <div class="lines">
       <div class="text" contenteditable spellcheck="false">
         You can edit this text! <br /><br />
-        Make robots.txt
-        for each and every website in gitub.
-        Put adventure time on thumb drives and send to Kyah.
-        Start on cool photo album for Hayden, Alex and baby.
-        Create svg.bauska.org &amp; svg-intro.bauska.org
-        Work on 404.html/404.css for primary domain &amp; subdomains
-        HaydenPhotos.bauska.org and haydenpics.bauska.org
+        Make robots.txt<br />
+        for each and every website in gitub.<br />
+        Put adventure time on thumb drives and send to Kyah.<br />
+        Start on cool photo album for Hayden, Alex and baby.<br />
+        Create svg.bauska.org &amp; svg-intro.bauska.org<br />
+        Work on 404.html/404.css for primary domain &amp; subdomains<br />
+        HaydenPhotos.bauska.org and haydenpics.bauska.org<br />
         Add robots.txt to websites throughout
       </div>
     </div>
@@ -70,18 +70,5 @@
     <div class="holes hole-middle"></div>
     <div class="holes hole-bottom"></div>
   </div>
-<!--
-  <div class="paper">
-    <div class="holes"></div>
-    <textarea placeholder="Make robots.txt for each and every website in gitub.
-      Put adventure time on thumb drives and send to Kyah.
-      Start on cool photo album for Hayden, Alex and baby.
-      Create svg.bauska.org &amp; svg-intro.bauska.org
-      Work on 404.html/404.css for primary domain &amp; subdomains
-      HaydenPhotos.bauska.org and haydenpics.bauska.org
-      Add robots.txt to websites throughout.">
-    </textarea>
-  </div>  <!-- class='paper' -->
--->
 </body>
 </html>
